@@ -1,3 +1,10 @@
+2005-07-31  Roger Leigh  <rleigh@debian.org>
+
+	* schroot/schroot.c (parse_options): Fix typo in documentation.
+
+	* schroot/sbuild-session.c (sbuild_session_require_auth): Simplify
+	by removing all redundant checks.
+
 2005-07-17  Roger Leigh  <rleigh@debian.org>
 
 	* debian/control (Build-Depends): Add gettext.
